--- a/adshelper/src/main/res/layout/dialog_full_screen_native_ad.xml
+++ b/adshelper/src/main/res/layout/dialog_full_screen_native_ad.xml
@@ -6,6 +6,15 @@
     android:layout_height="match_parent"
     android:background="#E9E9E9">
 
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:progressDrawable="@drawable/progressbar_progress_drawable"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <FrameLayout
         android:id="@+id/fl_native_ad_place_holder"
         android:layout_width="0dp"
