--- a/adshelper/src/main/res/layout/layout_google_native_ad_exit_full_screen_app_store.xml
+++ b/adshelper/src/main/res/layout/layout_google_native_ad_exit_full_screen_app_store.xml
@@ -226,19 +226,24 @@
 
                 <TextView
                     android:id="@+id/ad_store"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginStart="2dp"
                     android:layout_marginLeft="2dp"
-                    android:gravity="center_horizontal|center_vertical"
-                    android:maxLines="1"
+                    android:layout_marginEnd="4dp"
+                    android:layout_marginRight="4dp"
+                    android:ellipsize="marquee"
+                    android:gravity="center_vertical"
+                    android:marqueeRepeatLimit="marquee_forever"
+                    android:singleLine="true"
                     android:text="Google Play"
                     android:textColor="#5E5E60"
                     android:textSize="16sp"
                     android:textStyle="bold"
                     app:layout_constraintBaseline_toBaselineOf="@+id/ad_call_to_close"
-                    app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintEnd_toStartOf="@id/ad_call_to_close"
+                    app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toEndOf="@id/iv_play_logo"
                     app:layout_goneMarginLeft="12dp"
                     app:layout_goneMarginStart="12dp"
