--- a/adshelper/src/main/res/layout/layout_google_native_ad_medium.xml
+++ b/adshelper/src/main/res/layout/layout_google_native_ad_medium.xml
@@ -105,6 +105,7 @@
             android:layout_height="40dp"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
+            android:paddingHorizontal="8dp"
             android:background="@drawable/native_ad_button"
             android:gravity="center"
             android:text="ad_call_to_action"
