--- a/adshelper/src/main/res/layout/layout_google_native_ad_medium.xml
+++ b/adshelper/src/main/res/layout/layout_google_native_ad_medium.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:background="@android:color/white"
+        android:background="?attr/native_ads_background_color"
         android:minHeight="50dp"
         android:orientation="vertical">
 
@@ -20,11 +20,11 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
             android:layout_gravity="start"
-            android:background="?attr/colorAccent"
+            android:background="?attr/native_ads_main_color"
             android:paddingLeft="@dimen/_5sdp"
             android:paddingRight="@dimen/_5sdp"
             android:text="Ad"
-            android:textColor="@android:color/white"
+            android:textColor="?attr/native_ads_label_text_color"
             android:textSize="12sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -62,7 +62,7 @@
             android:layout_marginRight="8dp"
             android:ellipsize="end"
             android:singleLine="true"
-            android:textColor="?attr/colorAccent"
+            android:textColor="?attr/native_ads_main_color"
             android:textSize="12sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/ad_stars"
@@ -78,6 +78,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:isIndicator="true"
+            android:theme="@style/rating_bar_theme_main"
             android:numStars="5"
             android:stepSize="0.5"
             app:layout_constraintBottom_toTopOf="@+id/ad_body"
@@ -92,6 +93,7 @@
             android:layout_height="wrap_content"
             android:maxLines="3"
             android:textSize="10sp"
+            android:textColor="?attr/native_ads_body_text_color"
             app:layout_constraintBottom_toBottomOf="@id/test_icon_view"
             app:layout_constraintEnd_toEndOf="@id/ad_headline"
             app:layout_constraintHorizontal_bias="0.5"
@@ -112,7 +114,7 @@
             android:textSize="14sp"
             android:textAlignment="center"
             android:textAllCaps="true"
-            android:textColor="@android:color/white"
+            android:textColor="?attr/native_ads_label_text_color"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
