--- a/adshelper/src/main/res/drawable/native_ad_button.xml
+++ b/adshelper/src/main/res/drawable/native_ad_button.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="10dp" />
-    <solid android:color="?attr/colorAccent" />
+    <solid android:color="?attr/native_ads_main_color" />
 </shape>
