--- a/adshelper/src/main/res/layout/layout_google_native_ad_big.xml
+++ b/adshelper/src/main/res/layout/layout_google_native_ad_big.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:background="@android:color/white"
+        android:background="?attr/native_ads_background_color"
         android:minHeight="50dp"
         android:orientation="vertical">
 
@@ -20,11 +20,11 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
             android:layout_gravity="start"
-            android:background="?attr/colorAccent"
+            android:background="?attr/native_ads_main_color"
             android:paddingLeft="@dimen/_5sdp"
             android:paddingRight="@dimen/_5sdp"
             android:text="Ad"
-            android:textColor="@android:color/white"
+            android:textColor="?attr/native_ads_label_text_color"
             android:textSize="12sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -61,7 +61,7 @@
             android:layout_marginRight="8dp"
             android:ellipsize="end"
             android:singleLine="true"
-            android:textColor="?attr/colorAccent"
+            android:textColor="?attr/native_ads_main_color"
             android:textSize="16sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/ll_star"
@@ -86,6 +86,7 @@
                 android:id="@+id/ad_advertiser"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="?attr/native_ads_body_text_color"
                 android:textSize="13sp"
                 android:textStyle="bold" />
 
@@ -94,6 +95,7 @@
                 style="?android:attr/ratingBarStyleSmall"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:theme="@style/rating_bar_theme_main"
                 android:isIndicator="true"
                 android:numStars="5"
                 android:stepSize="0.5" />
@@ -108,6 +110,7 @@
             android:layout_marginTop="4dp"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
+            android:textColor="?attr/native_ads_body_text_color"
             android:maxLines="2"
             android:textSize="12sp"
             android:visibility="gone"
@@ -118,7 +121,7 @@
         <com.google.android.gms.ads.nativead.MediaView
             android:id="@+id/ad_media"
             android:layout_width="0dp"
-            android:layout_height="140dp"
+            android:layout_height="120dp"
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginTop="4dp"
@@ -135,7 +138,7 @@
         <Button
             android:id="@+id/ad_call_to_action"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="48dp"
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginEnd="8dp"
@@ -147,7 +150,7 @@
             android:textAlignment="center"
             android:textAllCaps="true"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            android:textColor="@android:color/white"
+            android:textColor="?attr/native_ads_label_text_color"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
