--- a/adshelper/src/main/res/layout/layout_google_native_ad_exit_full_screen_website.xml
+++ b/adshelper/src/main/res/layout/layout_google_native_ad_exit_full_screen_website.xml
@@ -5,7 +5,7 @@
     android:id="@+id/native_ad_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white">
+    android:background="?attr/native_ads_background_color">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -62,14 +62,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="start"
-            android:background="?attr/colorAccent"
+            android:background="?attr/native_ads_main_color"
             android:paddingStart="4dp"
             android:paddingLeft="4dp"
             android:paddingEnd="4dp"
             android:paddingRight="4dp"
             android:text="Ad"
+            android:textColor="?attr/native_ads_label_text_color"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-            android:textColor="@android:color/white"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -114,7 +114,7 @@
             android:maxLines="2"
             android:text="ad_headline"
             android:textAppearance="@style/TextAppearance.AppCompat.Headline"
-            android:textColor="@android:color/black"
+            android:textColor="?attr/native_ads_body_text_color"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/ad_body"
             app:layout_constraintEnd_toEndOf="parent"
@@ -133,7 +133,7 @@
             android:maxLines="2"
             android:text="ad_body ad_body ad_body ad_body ad_body ad_body ad_body ad_body ad_body "
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            android:textColor="@android:color/black"
+            android:textColor="?attr/native_ads_body_text_color"
             app:layout_constraintBottom_toTopOf="@+id/ad_stars"
             app:layout_constraintEnd_toEndOf="@id/ad_headline"
             app:layout_constraintHorizontal_bias="0.5"
@@ -183,7 +183,7 @@
                 android:maxLines="1"
                 android:text="ad_store"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                android:textColor="@android:color/black"
+                android:textColor="?attr/native_ads_body_text_color"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/ad_price"
                 app:layout_constraintHorizontal_bias="0.5"
@@ -205,7 +205,7 @@
                 android:text="ad_price"
                 android:textAllCaps="true"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                android:textColor="?attr/colorAccent"
+                android:textColor="?attr/native_ads_main_color"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -226,7 +226,7 @@
             android:maxLines="1"
             android:text="ad_advertiser"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            android:textColor="@android:color/black"
+            android:textColor="?attr/native_ads_body_text_color"
             app:layout_constraintBottom_toTopOf="@+id/ad_call_to_action"
             app:layout_constraintEnd_toEndOf="@id/ad_headline"
             app:layout_constraintHorizontal_bias="0.5"
@@ -246,7 +246,7 @@
             android:textAlignment="center"
             android:textAllCaps="true"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            android:textColor="@android:color/white"
+            android:textColor="?attr/native_ads_label_text_color"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@id/ad_headline"
             app:layout_constraintHorizontal_bias="0.5"
