--- a/app/src/main/res/layout/all_screen_header.xml
+++ b/app/src/main/res/layout/all_screen_header.xml
@@ -63,6 +63,7 @@
             android:layout_width="?attr/actionBarSize"
             android:layout_height="?attr/actionBarSize"
             android:padding="14dp"
+            app:tint="@android:color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
